syntax = "proto3";

package prisel;
option csharp_namespace = "Prisel.Protobuf";

import "prisel/room_info.proto";
import "prisel/room_state_snapshot.proto";

// type : CREATE_ROOM,
// packet_type : REQUEST
message CreateRoomRequest { string roomName = 1; }

// type : CREATE_ROOM,
// packet_type : RESPONSE
message CreateRoomResponse {
  RoomInfo room = 1;
  RoomStateSnapshot room_state = 2;
}